# xlang

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_sample.xlang
docs/: CLI_TESTING.md  GRAMMAR.md
experiments/: pipeline_a_code_interpreter.py
experiments/prompts/pipeline_a/: developer_instructions.txt  user_prompt_sales_dashboard.txt
notebook/: main.ipynb
notebook/examples/: README.md  comprehensive_examples.ipynb
src/exlang/: __init__.py  cli.py  compiler.py  helpers.py  io_utils.py  validator.py
src/notebook/: main.ipynb
tests/: test_cli.py  test_compiler.py  test_errors.py  test_helpers.py  test_jinja_escaping.py  test_merge_style.py  test_parser.py  test_roundtrip.py  test_xrange.py
tests/cli/: test_invalid.xlang  test_sample.xlang
