[project]
name = "exlang"
version = "0.1.0"
description = "A concise domain language for Excel generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openpyxl"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
